[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameFile/GUI/Endless Wave Interface/Setting/Settings/Settings.gd" type="Script" id=1]
[ext_resource path="res://GameFile/GUI/Endless Wave Interface/Setting/img/hud_x.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.639216, 0.67451, 0.694118, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.321569, 0.321569, 0.356863, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.443137, 0.470588, 0.486275, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.443137, 0.470588, 0.486275, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.478431, 0.478431, 0.498039, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.443137, 0.470588, 0.486275, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=2]
Button/styles/focus = SubResource( 6 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.332031, 0.332031, 0.332031, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.443137, 0.470588, 0.486275, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Settings" type="Control" groups=["Settings"]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 280 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.121569 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -140.0
margin_right = 200.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 200, 160 )
mouse_filter = 2
theme = SubResource( 2 )
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -172.5
margin_right = 200.0
margin_bottom = 172.5
rect_pivot_offset = Vector2( 200, 140 )
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 15
custom_constants/margin_left = 20
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 20.0
margin_top = 15.0
margin_right = 380.0
margin_bottom = 330.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 45.0
mouse_filter = 2
alignment = 2

[node name="TextureButton" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 315.0
margin_right = 360.0
margin_bottom = 45.0
rect_min_size = Vector2( 45, 45 )
mouse_filter = 1
texture_normal = ExtResource( 2 )
expand = true

[node name="Restat" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 360.0
margin_bottom = 135.0
rect_min_size = Vector2( 360, 80 )
mouse_filter = 1
text = "Restart"

[node name="GoToMenu" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 360.0
margin_bottom = 225.0
rect_min_size = Vector2( 360, 80 )
mouse_filter = 1
text = "Go menu"

[node name="For_The_Tester" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 235.0
margin_right = 360.0
margin_bottom = 315.0
rect_min_size = Vector2( 360, 80 )
mouse_filter = 1
text = "for the tester"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 20, -5 )
text = "Pause"
align = 1

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Restat" to="." method="_on_Button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/GoToMenu" to="." method="_on_Button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/For_The_Tester" to="." method="_on_For_The_Tester_pressed"]
